--- a/api/v1/swagger/paths/biblios.yaml
+++ b/api/v1/swagger/paths/biblios.yaml
@@ -89,6 +89,63 @@
     x-koha-authorization:
       permissions:
         editcatalogue: edit_catalogue
+"/biblios/{biblio_id}/bookings":
+  get:
+    x-mojo-to: Biblios#get_bookings
+    operationId: getBiblioBookings
+    tags:
+      - bookings
+    summary: Get bookings for a biblio
+    parameters:
+      - $ref: ../parameters.yaml#/biblio_id_pp
+      - $ref: ../parameters.yaml#/match
+      - $ref: ../parameters.yaml#/order_by
+      - $ref: ../parameters.yaml#/page
+      - $ref: ../parameters.yaml#/per_page
+      - $ref: ../parameters.yaml#/q_param
+      - $ref: ../parameters.yaml#/q_body
+      - $ref: ../parameters.yaml#/q_header
+    consumes:
+      - application/json
+    produces:
+      - application/json
+    responses:
+      "200":
+        description: A list of the bookings attached to the record
+        schema:
+          type: array
+          items:
+            $ref: ../definitions.yaml#/booking
+      "401":
+        description: Authentication required
+        schema:
+          $ref: ../definitions.yaml#/error
+      "403":
+        description: Access forbidden
+        schema:
+          $ref: ../definitions.yaml#/error
+      "404":
+        description: Biblio not found
+        schema:
+          $ref: ../definitions.yaml#/error
+      "406":
+        description: Not acceptable
+        schema:
+          type: array
+          description: Accepted content-types
+          items:
+            type: string
+      "500":
+        description: Internal server error
+        schema:
+          $ref: ../definitions.yaml#/error
+      "503":
+        description: Under maintenance
+        schema:
+          $ref: ../definitions.yaml#/error
+    x-koha-authorization:
+      permissions:
+        circulation: "1"
 "/biblios/{biblio_id}/checkouts":
   get:
     x-mojo-to: Biblios#get_checkouts
