--- a/api/v1/swagger/paths/items.yaml
+++ b/api/v1/swagger/paths/items.yaml
@@ -86,6 +86,60 @@
     x-koha-authorization:
       permissions:
         catalogue: "1"
+/items/{item_id}/bookings:
+  get:
+    x-mojo-to: Items#bookings
+    operationId: getItemBookings
+    summary: Get existing bookings for an item
+    tags:
+      - items
+    parameters:
+      - $ref: ../parameters.yaml#/item_id_pp
+      - $ref: ../parameters.yaml#/match
+      - $ref: ../parameters.yaml#/order_by
+      - $ref: ../parameters.yaml#/page
+      - $ref: ../parameters.yaml#/per_page
+      - $ref: ../parameters.yaml#/q_param
+      - $ref: ../parameters.yaml#/q_body
+      - $ref: ../parameters.yaml#/q_header
+    consumes:
+      - application/json
+    produces:
+      - application/json
+    responses:
+      "200":
+        description: Item bookings
+        schema:
+          type: array
+          items:
+            $ref: ../definitions.yaml#/booking
+      "400":
+        description: Missing or wrong parameters
+        schema:
+          $ref: ../definitions.yaml#/error
+      "401":
+        description: Authentication required
+        schema:
+          $ref: ../definitions.yaml#/error
+      "403":
+        description: Access forbidden
+        schema:
+          $ref: ../definitions.yaml#/error
+      "404":
+        description: Item not found
+        schema:
+          $ref: ../definitions.yaml#/error
+      "500":
+        description: Internal server error
+        schema:
+          $ref: ../definitions.yaml#/error
+      "503":
+        description: Under maintenance
+        schema:
+          $ref: ../definitions.yaml#/error
+    x-koha-authorization:
+      permissions:
+        circulation: 1
 "/items/{item_id}/pickup_locations":
   get:
     x-mojo-to: Items#pickup_locations
