Bug 28854: Expose functionality to attach items to bundles
This patch adds methods the the Koha::Item object for managing item
bundling operations and then exposes those methods via the REST API.

We include the new `BundleNotLoanValue` preference for setting not
for loan values when an item is added to a bundle.

Finally, we expose bundle management via the catalogue details page.

Test plan:
0) Apply patches up to this point and run the database update
1) Configuration: `BundleNotLoanValue` should have been set by the
   database update and point to a newly added AV value.
2) Creating a new bundle
   * Add a new bib record
   * Mark the bib record as a 'collection' type by setting leader
     position 7 to 'c'
   * Add a new item to this bib record
   * You should see a new 'Manage bundle' button available in the
     'Actions' column of the Holdings table.
   * Clicking 'Manage bundle' should expand the table to include a new
     row directly beneath this one.
   * Use the new 'Add to bundle' button that appears in this row to
     trigger a modal that allows entering the barcode of items you wish
     to add to the bundle
   * Upon closing the modal, the bundle content table should reload and
     contain your newly associated items.
   * You can subsequently remove an item from a bundle using the new
     'Remove' button.
3) Not for loan
   * Items that have been added into a bundle should now appear as 'Not
     for loan' from their original biblio record and note which bundle
     they belong to.
4) Error cases
   * Try adding an item that already belongs to a bundle to another
     bundle: Note an error is displayed in the modal form.
5) The bundles feature can be disabled by unsetting the
   `BundleNotLoanValue` system preference.

TODO: Add Object Tests + API Tests

--- a/api/v1/swagger/paths.yaml
+++ b/api/v1/swagger/paths.yaml
@@ -59,6 +59,10 @@
   $ref: paths/items.yaml#/~1items
 "/items/{item_id}":
   $ref: paths/items.yaml#/~1items~1{item_id}
+"/items/{item_id}/bundled_items":
+  $ref: paths/items.yaml#/~1items~1{item_id}~1bundled_items
+"/items/{item_id}/bundled_items/{bundled_item_id}":
+  $ref: paths/items.yaml#/~1items~1{item_id}~1bundled_items~1{bundled_item_id}
 "/items/{item_id}/pickup_locations":
   $ref: paths/items.yaml#/~1items~1{item_id}~1pickup_locations
 /libraries:
