Bug 29002: Add ability to book material from the staff client
This patch introduces a new modal to the biblio details page to allow
booking of materials.

Test plan
1) Navigate to the details page of a biblio
2) Note the new 'Place booking' button in the toolbar
3) Click the new button and note the new modal dialogue
4) Enter part of a patron name or cardnumber and then select from the
   presented results
5) Select a start date and end date from the calender
6) Submit

--- a/api/v1/swagger/paths/biblios.yaml
+++ b/api/v1/swagger/paths/biblios.yaml
@@ -199,6 +199,11 @@
     summary: Get items for a biblio
     parameters:
       - $ref: ../parameters.yaml#/biblio_id_pp
+      - name: bookable
+        in: query
+        description: Limit to items that are bookable
+        required: false
+        type: boolean
       - $ref: ../parameters.yaml#/match
       - $ref: ../parameters.yaml#/order_by
       - $ref: ../parameters.yaml#/page
