--- a/api/v1/swagger/paths/items.yaml
+++ b/api/v1/swagger/paths/items.yaml
@@ -148,13 +148,13 @@
       - items
     summary: Add item to bundle
     parameters:
-      - $ref: ../parameters.json#/item_id_pp
+      - $ref: ../parameters.yaml#/item_id_pp
       - name: body
         in: body
         description: A JSON object containing information about the new bundle link
         required: true
         schema:
-          $ref: ../definitions.json#/bundle_link
+          $ref: ../definitions.yaml#/bundle_link
     consumes:
       - application/json
     produces:
@@ -164,35 +164,35 @@
         description: A successfully created bundle link
         schema:
           items:
-            $ref: ../definitions.json#/item
+            $ref: ../definitions.yaml#/item
       "400":
         description: Bad parameter
         schema:
-          $ref: ../definitions.json#/error
+          $ref: ../definitions.yaml#/error
       "401":
         description: Authentication required
         schema:
-          $ref: ../definitions.json#/error
+          $ref: ../definitions.yaml#/error
       "403":
         description: Access forbidden
         schema:
-          $ref: ../definitions.json#/error
+          $ref: ../definitions.yaml#/error
       "404":
         description: Resource not found
         schema:
-          $ref: ../definitions.json#/error
+          $ref: ../definitions.yaml#/error
       "409":
         description: Conflict in creating resource
         schema:
-          $ref: ../definitions.json#/error
+          $ref: ../definitions.yaml#/error
       "500":
         description: Internal server error
         schema:
-          $ref: ../definitions.json#/error
+          $ref: ../definitions.yaml#/error
       "503":
         description: Under maintenance
         schema:
-          $ref: ../definitions.json#/error
+          $ref: ../definitions.yaml#/error
     x-koha-authorization:
       permissions:
         catalogue: 1
@@ -203,19 +203,19 @@
       - items
     summary: List bundled items
     parameters:
-      - $ref: ../parameters.json#/item_id_pp
+      - $ref: ../parameters.yaml#/item_id_pp
       - name: external_id
         in: query
         description: Search on the item's barcode
         required: false
         type: string
-      - $ref: ../parameters.json#/match
-      - $ref: ../parameters.json#/order_by
-      - $ref: ../parameters.json#/page
-      - $ref: ../parameters.json#/per_page
-      - $ref: ../parameters.json#/q_param
-      - $ref: ../parameters.json#/q_body
-      - $ref: ../parameters.json#/q_header
+      - $ref: ../parameters.yaml#/match
+      - $ref: ../parameters.yaml#/order_by
+      - $ref: ../parameters.yaml#/page
+      - $ref: ../parameters.yaml#/per_page
+      - $ref: ../parameters.yaml#/q_param
+      - $ref: ../parameters.yaml#/q_body
+      - $ref: ../parameters.yaml#/q_header
     consumes:
       - application/json
     produces:
@@ -226,23 +226,23 @@
         schema:
           type: array
           items:
-            $ref: ../definitions.json#/item
+            $ref: ../definitions.yaml#/item
       "401":
         description: Authentication required
         schema:
-          $ref: ../definitions.json#/error
+          $ref: ../definitions.yaml#/error
       "403":
         description: Access forbidden
         schema:
-          $ref: ../definitions.json#/error
+          $ref: ../definitions.yaml#/error
       "500":
         description: Internal server error
         schema:
-          $ref: ../definitions.json#/error
+          $ref: ../definitions.yaml#/error
       "503":
         description: Under maintenance
         schema:
-          $ref: ../definitions.json#/error
+          $ref: ../definitions.yaml#/error
     x-koha-authorization:
       permissions:
         catalogue: "1"
@@ -260,7 +260,7 @@
       - items
     summary: Remove item from bundle
     parameters:
-      - $ref: ../parameters.json#/item_id_pp
+      - $ref: ../parameters.yaml#/item_id_pp
       - name: bundled_item_id
         in: path
         description: Internal identifier for the bundled item
@@ -276,27 +276,27 @@
       "400":
         description: Bad parameter
         schema:
-          $ref: ../definitions.json#/error
+          $ref: ../definitions.yaml#/error
       "401":
         description: Authentication required
         schema:
-          $ref: ../definitions.json#/error
+          $ref: ../definitions.yaml#/error
       "403":
         description: Access forbidden
         schema:
-          $ref: ../definitions.json#/error
+          $ref: ../definitions.yaml#/error
       "404":
         description: Resource not found
         schema:
-          $ref: ../definitions.json#/error
+          $ref: ../definitions.yaml#/error
       "500":
         description: Internal server error
         schema:
-          $ref: ../definitions.json#/error
+          $ref: ../definitions.yaml#/error
       "503":
         description: Under maintenance
         schema:
-          $ref: ../definitions.json#/error
+          $ref: ../definitions.yaml#/error
     x-koha-authorization:
       permissions:
         catalogue: 1
